--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=survey
+
+members.file=Members.csv
+participation.file=Participation.csv
+surveys.file=Surveys.csv
+
+survey-stat.cache.ttl=720
