--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<jackson-dataformat-csv.version>2.17.1</jackson-dataformat-csv.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,7 +49,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-csv</artifactId>
-			<version>2.17.1</version>
+			<version>${jackson-dataformat-csv.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -64,6 +65,7 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<jvmArguments>--enable-preview</jvmArguments>
 				</configuration>
 			</plugin>
             <plugin>
@@ -75,6 +77,13 @@
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
+			</plugin>
         </plugins>
 	</build>
 
